--- a/Projects Hub/Fall 2022 Club Project/Example/Data Science Club ETL Pipeline.ipynb
+++ b/Projects Hub/Fall 2022 Club Project/Example/Data Science Club ETL Pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,21 +71,220 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 10%|█         | 1002/10000 [01:36<13:36, 11.03it/s] "
+      "100%|██████████| 10000/10000 [16:26<00:00, 10.14it/s]\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>danceability</th>\n",
+       "      <th>energy</th>\n",
+       "      <th>key</th>\n",
+       "      <th>loudness</th>\n",
+       "      <th>mode</th>\n",
+       "      <th>speechiness</th>\n",
+       "      <th>acousticness</th>\n",
+       "      <th>instrumentalness</th>\n",
+       "      <th>liveness</th>\n",
+       "      <th>valence</th>\n",
+       "      <th>tempo</th>\n",
+       "      <th>type</th>\n",
+       "      <th>id</th>\n",
+       "      <th>uri</th>\n",
+       "      <th>track_href</th>\n",
+       "      <th>analysis_url</th>\n",
+       "      <th>duration_ms</th>\n",
+       "      <th>time_signature</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.612</td>\n",
+       "      <td>0.117</td>\n",
+       "      <td>9</td>\n",
+       "      <td>-15.357</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.1770</td>\n",
+       "      <td>0.9900</td>\n",
+       "      <td>0.000310</td>\n",
+       "      <td>0.0788</td>\n",
+       "      <td>0.781</td>\n",
+       "      <td>172.444</td>\n",
+       "      <td>audio_features</td>\n",
+       "      <td>1a8JNXclpuzv9Rx8KxBbIO</td>\n",
+       "      <td>spotify:track:1a8JNXclpuzv9Rx8KxBbIO</td>\n",
+       "      <td>https://api.spotify.com/v1/tracks/1a8JNXclpuzv...</td>\n",
+       "      <td>https://api.spotify.com/v1/audio-analysis/1a8J...</td>\n",
+       "      <td>153260</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.716</td>\n",
+       "      <td>0.101</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-13.472</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0881</td>\n",
+       "      <td>0.9720</td>\n",
+       "      <td>0.871000</td>\n",
+       "      <td>0.1180</td>\n",
+       "      <td>0.336</td>\n",
+       "      <td>85.006</td>\n",
+       "      <td>audio_features</td>\n",
+       "      <td>1a8jOpvRqrBIBPptN0LZnm</td>\n",
+       "      <td>spotify:track:1a8jOpvRqrBIBPptN0LZnm</td>\n",
+       "      <td>https://api.spotify.com/v1/tracks/1a8jOpvRqrBI...</td>\n",
+       "      <td>https://api.spotify.com/v1/audio-analysis/1a8j...</td>\n",
+       "      <td>139549</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.483</td>\n",
+       "      <td>0.366</td>\n",
+       "      <td>3</td>\n",
+       "      <td>-8.198</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0297</td>\n",
+       "      <td>0.7890</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.2080</td>\n",
+       "      <td>0.264</td>\n",
+       "      <td>124.081</td>\n",
+       "      <td>audio_features</td>\n",
+       "      <td>1a8joZoDooqsCTZBTF14RP</td>\n",
+       "      <td>spotify:track:1a8joZoDooqsCTZBTF14RP</td>\n",
+       "      <td>https://api.spotify.com/v1/tracks/1a8joZoDooqs...</td>\n",
+       "      <td>https://api.spotify.com/v1/audio-analysis/1a8j...</td>\n",
+       "      <td>236800</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.829</td>\n",
+       "      <td>0.463</td>\n",
+       "      <td>6</td>\n",
+       "      <td>-9.878</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0313</td>\n",
+       "      <td>0.6970</td>\n",
+       "      <td>0.000013</td>\n",
+       "      <td>0.1170</td>\n",
+       "      <td>0.504</td>\n",
+       "      <td>111.963</td>\n",
+       "      <td>audio_features</td>\n",
+       "      <td>1a8JZlyrP1UdX9nEZdLzxX</td>\n",
+       "      <td>spotify:track:1a8JZlyrP1UdX9nEZdLzxX</td>\n",
+       "      <td>https://api.spotify.com/v1/tracks/1a8JZlyrP1Ud...</td>\n",
+       "      <td>https://api.spotify.com/v1/audio-analysis/1a8J...</td>\n",
+       "      <td>236470</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.338</td>\n",
+       "      <td>0.567</td>\n",
+       "      <td>9</td>\n",
+       "      <td>-8.826</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.1370</td>\n",
+       "      <td>0.0904</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0669</td>\n",
+       "      <td>0.297</td>\n",
+       "      <td>97.551</td>\n",
+       "      <td>audio_features</td>\n",
+       "      <td>1A8k3E7mFZm0Oj7tAt86gK</td>\n",
+       "      <td>spotify:track:1A8k3E7mFZm0Oj7tAt86gK</td>\n",
+       "      <td>https://api.spotify.com/v1/tracks/1A8k3E7mFZm0...</td>\n",
+       "      <td>https://api.spotify.com/v1/audio-analysis/1A8k...</td>\n",
+       "      <td>262493</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   danceability  energy  key  loudness  mode  speechiness  acousticness  \\\n",
+       "0         0.612   0.117    9   -15.357     1       0.1770        0.9900   \n",
+       "0         0.716   0.101    0   -13.472     1       0.0881        0.9720   \n",
+       "0         0.483   0.366    3    -8.198     1       0.0297        0.7890   \n",
+       "0         0.829   0.463    6    -9.878     1       0.0313        0.6970   \n",
+       "0         0.338   0.567    9    -8.826     1       0.1370        0.0904   \n",
+       "\n",
+       "   instrumentalness  liveness  valence    tempo            type  \\\n",
+       "0          0.000310    0.0788    0.781  172.444  audio_features   \n",
+       "0          0.871000    0.1180    0.336   85.006  audio_features   \n",
+       "0          0.000000    0.2080    0.264  124.081  audio_features   \n",
+       "0          0.000013    0.1170    0.504  111.963  audio_features   \n",
+       "0          0.000000    0.0669    0.297   97.551  audio_features   \n",
+       "\n",
+       "                       id                                   uri  \\\n",
+       "0  1a8JNXclpuzv9Rx8KxBbIO  spotify:track:1a8JNXclpuzv9Rx8KxBbIO   \n",
+       "0  1a8jOpvRqrBIBPptN0LZnm  spotify:track:1a8jOpvRqrBIBPptN0LZnm   \n",
+       "0  1a8joZoDooqsCTZBTF14RP  spotify:track:1a8joZoDooqsCTZBTF14RP   \n",
+       "0  1a8JZlyrP1UdX9nEZdLzxX  spotify:track:1a8JZlyrP1UdX9nEZdLzxX   \n",
+       "0  1A8k3E7mFZm0Oj7tAt86gK  spotify:track:1A8k3E7mFZm0Oj7tAt86gK   \n",
+       "\n",
+       "                                          track_href  \\\n",
+       "0  https://api.spotify.com/v1/tracks/1a8JNXclpuzv...   \n",
+       "0  https://api.spotify.com/v1/tracks/1a8jOpvRqrBI...   \n",
+       "0  https://api.spotify.com/v1/tracks/1a8joZoDooqs...   \n",
+       "0  https://api.spotify.com/v1/tracks/1a8JZlyrP1Ud...   \n",
+       "0  https://api.spotify.com/v1/tracks/1A8k3E7mFZm0...   \n",
+       "\n",
+       "                                        analysis_url  duration_ms  \\\n",
+       "0  https://api.spotify.com/v1/audio-analysis/1a8J...       153260   \n",
+       "0  https://api.spotify.com/v1/audio-analysis/1a8j...       139549   \n",
+       "0  https://api.spotify.com/v1/audio-analysis/1a8j...       236800   \n",
+       "0  https://api.spotify.com/v1/audio-analysis/1a8J...       236470   \n",
+       "0  https://api.spotify.com/v1/audio-analysis/1A8k...       262493   \n",
+       "\n",
+       "   time_signature  \n",
+       "0               4  \n",
+       "0               3  \n",
+       "0               4  \n",
+       "0               4  \n",
+       "0               4  "
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Extract tracks from API\n",
     "output_df = pd.DataFrame()\n",
-    "for t in tqdm(results[190001:200001]):\n",
+    "for t in tqdm(results[340001:350001]):\n",
     "      output = sp.audio_features(t)\n",
     "      output_df = output_df.append(pd.DataFrame(output))\n",
     "output_df.head()"
@@ -93,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +300,7 @@
      "output_type": "stream",
      "text": [
       "10000 rows imported to database.\n",
-      "App contains (190001,) songs.\n"
+      "App contains (350001,) songs.\n"
      ]
     }
    ],
