--- a/Projects Hub/Fall 2022 Club Project/Example/Pipelines/Data Science Club ETL Pipeline.ipynb
+++ b/Projects Hub/Fall 2022 Club Project/Example/Pipelines/Data Science Club ETL Pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,14 +71,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10000/10000 [16:26<00:00, 10.14it/s]\n"
+      "100%|██████████| 25000/25000 [36:15<00:00, 11.49it/s]  \n"
      ]
     },
     {
@@ -120,113 +120,119 @@
        "      <th>analysis_url</th>\n",
        "      <th>duration_ms</th>\n",
        "      <th>time_signature</th>\n",
+       "      <th>0</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.612</td>\n",
-       "      <td>0.117</td>\n",
-       "      <td>9</td>\n",
-       "      <td>-15.357</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.1770</td>\n",
-       "      <td>0.9900</td>\n",
-       "      <td>0.000310</td>\n",
-       "      <td>0.0788</td>\n",
-       "      <td>0.781</td>\n",
-       "      <td>172.444</td>\n",
+       "      <td>0.564</td>\n",
+       "      <td>0.486</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-12.205</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0387</td>\n",
+       "      <td>0.00144</td>\n",
+       "      <td>0.692000</td>\n",
+       "      <td>0.0884</td>\n",
+       "      <td>0.679</td>\n",
+       "      <td>149.920</td>\n",
        "      <td>audio_features</td>\n",
-       "      <td>1a8JNXclpuzv9Rx8KxBbIO</td>\n",
-       "      <td>spotify:track:1a8JNXclpuzv9Rx8KxBbIO</td>\n",
-       "      <td>https://api.spotify.com/v1/tracks/1a8JNXclpuzv...</td>\n",
-       "      <td>https://api.spotify.com/v1/audio-analysis/1a8J...</td>\n",
-       "      <td>153260</td>\n",
-       "      <td>4</td>\n",
+       "      <td>1JaocWtKVCDiRERQpDh8s3</td>\n",
+       "      <td>spotify:track:1JaocWtKVCDiRERQpDh8s3</td>\n",
+       "      <td>https://api.spotify.com/v1/tracks/1JaocWtKVCDi...</td>\n",
+       "      <td>https://api.spotify.com/v1/audio-analysis/1Jao...</td>\n",
+       "      <td>197333.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.716</td>\n",
-       "      <td>0.101</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-13.472</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0881</td>\n",
-       "      <td>0.9720</td>\n",
-       "      <td>0.871000</td>\n",
-       "      <td>0.1180</td>\n",
-       "      <td>0.336</td>\n",
-       "      <td>85.006</td>\n",
-       "      <td>audio_features</td>\n",
-       "      <td>1a8jOpvRqrBIBPptN0LZnm</td>\n",
-       "      <td>spotify:track:1a8jOpvRqrBIBPptN0LZnm</td>\n",
-       "      <td>https://api.spotify.com/v1/tracks/1a8jOpvRqrBI...</td>\n",
-       "      <td>https://api.spotify.com/v1/audio-analysis/1a8j...</td>\n",
-       "      <td>139549</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.483</td>\n",
-       "      <td>0.366</td>\n",
-       "      <td>3</td>\n",
-       "      <td>-8.198</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0297</td>\n",
-       "      <td>0.7890</td>\n",
+       "      <td>0.742</td>\n",
+       "      <td>0.818</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>-3.954</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.2660</td>\n",
+       "      <td>0.00253</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.2080</td>\n",
-       "      <td>0.264</td>\n",
-       "      <td>124.081</td>\n",
+       "      <td>0.2210</td>\n",
+       "      <td>0.519</td>\n",
+       "      <td>78.969</td>\n",
        "      <td>audio_features</td>\n",
-       "      <td>1a8joZoDooqsCTZBTF14RP</td>\n",
-       "      <td>spotify:track:1a8joZoDooqsCTZBTF14RP</td>\n",
-       "      <td>https://api.spotify.com/v1/tracks/1a8joZoDooqs...</td>\n",
-       "      <td>https://api.spotify.com/v1/audio-analysis/1a8j...</td>\n",
-       "      <td>236800</td>\n",
-       "      <td>4</td>\n",
+       "      <td>1jAOdMcFKekgKXB21XsnJr</td>\n",
+       "      <td>spotify:track:1jAOdMcFKekgKXB21XsnJr</td>\n",
+       "      <td>https://api.spotify.com/v1/tracks/1jAOdMcFKekg...</td>\n",
+       "      <td>https://api.spotify.com/v1/audio-analysis/1jAO...</td>\n",
+       "      <td>172932.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.829</td>\n",
-       "      <td>0.463</td>\n",
-       "      <td>6</td>\n",
-       "      <td>-9.878</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0313</td>\n",
-       "      <td>0.6970</td>\n",
-       "      <td>0.000013</td>\n",
-       "      <td>0.1170</td>\n",
-       "      <td>0.504</td>\n",
-       "      <td>111.963</td>\n",
+       "      <td>0.600</td>\n",
+       "      <td>0.596</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>-6.706</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0274</td>\n",
+       "      <td>0.04220</td>\n",
+       "      <td>0.024600</td>\n",
+       "      <td>0.1410</td>\n",
+       "      <td>0.257</td>\n",
+       "      <td>126.045</td>\n",
        "      <td>audio_features</td>\n",
-       "      <td>1a8JZlyrP1UdX9nEZdLzxX</td>\n",
-       "      <td>spotify:track:1a8JZlyrP1UdX9nEZdLzxX</td>\n",
-       "      <td>https://api.spotify.com/v1/tracks/1a8JZlyrP1Ud...</td>\n",
-       "      <td>https://api.spotify.com/v1/audio-analysis/1a8J...</td>\n",
-       "      <td>236470</td>\n",
-       "      <td>4</td>\n",
+       "      <td>1JaOepr3SJa7zhQgl4CfLz</td>\n",
+       "      <td>spotify:track:1JaOepr3SJa7zhQgl4CfLz</td>\n",
+       "      <td>https://api.spotify.com/v1/tracks/1JaOepr3SJa7...</td>\n",
+       "      <td>https://api.spotify.com/v1/audio-analysis/1JaO...</td>\n",
+       "      <td>216507.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.338</td>\n",
-       "      <td>0.567</td>\n",
-       "      <td>9</td>\n",
-       "      <td>-8.826</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.1370</td>\n",
-       "      <td>0.0904</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0669</td>\n",
-       "      <td>0.297</td>\n",
-       "      <td>97.551</td>\n",
+       "      <td>0.343</td>\n",
+       "      <td>0.636</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-10.703</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0674</td>\n",
+       "      <td>0.42700</td>\n",
+       "      <td>0.009130</td>\n",
+       "      <td>0.1430</td>\n",
+       "      <td>0.554</td>\n",
+       "      <td>155.842</td>\n",
        "      <td>audio_features</td>\n",
-       "      <td>1A8k3E7mFZm0Oj7tAt86gK</td>\n",
-       "      <td>spotify:track:1A8k3E7mFZm0Oj7tAt86gK</td>\n",
-       "      <td>https://api.spotify.com/v1/tracks/1A8k3E7mFZm0...</td>\n",
-       "      <td>https://api.spotify.com/v1/audio-analysis/1A8k...</td>\n",
-       "      <td>262493</td>\n",
-       "      <td>4</td>\n",
+       "      <td>1JaOhdWitLJB5bcXR3T9tl</td>\n",
+       "      <td>spotify:track:1JaOhdWitLJB5bcXR3T9tl</td>\n",
+       "      <td>https://api.spotify.com/v1/tracks/1JaOhdWitLJB...</td>\n",
+       "      <td>https://api.spotify.com/v1/audio-analysis/1JaO...</td>\n",
+       "      <td>820733.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.692</td>\n",
+       "      <td>0.147</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>-16.150</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0431</td>\n",
+       "      <td>0.74200</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.0938</td>\n",
+       "      <td>0.763</td>\n",
+       "      <td>96.083</td>\n",
+       "      <td>audio_features</td>\n",
+       "      <td>1jAoJzGETQaulxFXcaN2RG</td>\n",
+       "      <td>spotify:track:1jAoJzGETQaulxFXcaN2RG</td>\n",
+       "      <td>https://api.spotify.com/v1/tracks/1jAoJzGETQau...</td>\n",
+       "      <td>https://api.spotify.com/v1/audio-analysis/1jAo...</td>\n",
+       "      <td>150013.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -234,49 +240,49 @@
       ],
       "text/plain": [
        "   danceability  energy  key  loudness  mode  speechiness  acousticness  \\\n",
-       "0         0.612   0.117    9   -15.357     1       0.1770        0.9900   \n",
-       "0         0.716   0.101    0   -13.472     1       0.0881        0.9720   \n",
-       "0         0.483   0.366    3    -8.198     1       0.0297        0.7890   \n",
-       "0         0.829   0.463    6    -9.878     1       0.0313        0.6970   \n",
-       "0         0.338   0.567    9    -8.826     1       0.1370        0.0904   \n",
+       "0         0.564   0.486  1.0   -12.205   0.0       0.0387       0.00144   \n",
+       "0         0.742   0.818  5.0    -3.954   0.0       0.2660       0.00253   \n",
+       "0         0.600   0.596  4.0    -6.706   0.0       0.0274       0.04220   \n",
+       "0         0.343   0.636  0.0   -10.703   1.0       0.0674       0.42700   \n",
+       "0         0.692   0.147  2.0   -16.150   1.0       0.0431       0.74200   \n",
        "\n",
        "   instrumentalness  liveness  valence    tempo            type  \\\n",
-       "0          0.000310    0.0788    0.781  172.444  audio_features   \n",
-       "0          0.871000    0.1180    0.336   85.006  audio_features   \n",
-       "0          0.000000    0.2080    0.264  124.081  audio_features   \n",
-       "0          0.000013    0.1170    0.504  111.963  audio_features   \n",
-       "0          0.000000    0.0669    0.297   97.551  audio_features   \n",
+       "0          0.692000    0.0884    0.679  149.920  audio_features   \n",
+       "0          0.000000    0.2210    0.519   78.969  audio_features   \n",
+       "0          0.024600    0.1410    0.257  126.045  audio_features   \n",
+       "0          0.009130    0.1430    0.554  155.842  audio_features   \n",
+       "0          0.000001    0.0938    0.763   96.083  audio_features   \n",
        "\n",
        "                       id                                   uri  \\\n",
-       "0  1a8JNXclpuzv9Rx8KxBbIO  spotify:track:1a8JNXclpuzv9Rx8KxBbIO   \n",
-       "0  1a8jOpvRqrBIBPptN0LZnm  spotify:track:1a8jOpvRqrBIBPptN0LZnm   \n",
-       "0  1a8joZoDooqsCTZBTF14RP  spotify:track:1a8joZoDooqsCTZBTF14RP   \n",
-       "0  1a8JZlyrP1UdX9nEZdLzxX  spotify:track:1a8JZlyrP1UdX9nEZdLzxX   \n",
-       "0  1A8k3E7mFZm0Oj7tAt86gK  spotify:track:1A8k3E7mFZm0Oj7tAt86gK   \n",
+       "0  1JaocWtKVCDiRERQpDh8s3  spotify:track:1JaocWtKVCDiRERQpDh8s3   \n",
+       "0  1jAOdMcFKekgKXB21XsnJr  spotify:track:1jAOdMcFKekgKXB21XsnJr   \n",
+       "0  1JaOepr3SJa7zhQgl4CfLz  spotify:track:1JaOepr3SJa7zhQgl4CfLz   \n",
+       "0  1JaOhdWitLJB5bcXR3T9tl  spotify:track:1JaOhdWitLJB5bcXR3T9tl   \n",
+       "0  1jAoJzGETQaulxFXcaN2RG  spotify:track:1jAoJzGETQaulxFXcaN2RG   \n",
        "\n",
        "                                          track_href  \\\n",
-       "0  https://api.spotify.com/v1/tracks/1a8JNXclpuzv...   \n",
-       "0  https://api.spotify.com/v1/tracks/1a8jOpvRqrBI...   \n",
-       "0  https://api.spotify.com/v1/tracks/1a8joZoDooqs...   \n",
-       "0  https://api.spotify.com/v1/tracks/1a8JZlyrP1Ud...   \n",
-       "0  https://api.spotify.com/v1/tracks/1A8k3E7mFZm0...   \n",
+       "0  https://api.spotify.com/v1/tracks/1JaocWtKVCDi...   \n",
+       "0  https://api.spotify.com/v1/tracks/1jAOdMcFKekg...   \n",
+       "0  https://api.spotify.com/v1/tracks/1JaOepr3SJa7...   \n",
+       "0  https://api.spotify.com/v1/tracks/1JaOhdWitLJB...   \n",
+       "0  https://api.spotify.com/v1/tracks/1jAoJzGETQau...   \n",
        "\n",
        "                                        analysis_url  duration_ms  \\\n",
-       "0  https://api.spotify.com/v1/audio-analysis/1a8J...       153260   \n",
-       "0  https://api.spotify.com/v1/audio-analysis/1a8j...       139549   \n",
-       "0  https://api.spotify.com/v1/audio-analysis/1a8j...       236800   \n",
-       "0  https://api.spotify.com/v1/audio-analysis/1a8J...       236470   \n",
-       "0  https://api.spotify.com/v1/audio-analysis/1A8k...       262493   \n",
+       "0  https://api.spotify.com/v1/audio-analysis/1Jao...     197333.0   \n",
+       "0  https://api.spotify.com/v1/audio-analysis/1jAO...     172932.0   \n",
+       "0  https://api.spotify.com/v1/audio-analysis/1JaO...     216507.0   \n",
+       "0  https://api.spotify.com/v1/audio-analysis/1JaO...     820733.0   \n",
+       "0  https://api.spotify.com/v1/audio-analysis/1jAo...     150013.0   \n",
        "\n",
-       "   time_signature  \n",
-       "0               4  \n",
-       "0               3  \n",
-       "0               4  \n",
-       "0               4  \n",
-       "0               4  "
+       "   time_signature    0  \n",
+       "0             4.0  NaN  \n",
+       "0             4.0  NaN  \n",
+       "0             4.0  NaN  \n",
+       "0             4.0  NaN  \n",
+       "0             4.0  NaN  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,23 +290,23 @@
    "source": [
     "# Extract tracks from API\n",
     "output_df = pd.DataFrame()\n",
-    "for t in tqdm(results[340001:350001]):\n",
-    "      output = sp.audio_features(t)\n",
-    "      output_df = output_df.append(pd.DataFrame(output))\n",
+    "for row in tqdm(results[425001:450001]):\n",
+    "      output = sp.audio_features(row)\n",
+    "      output_df = output_df.append(output)\n",
     "output_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10000 rows imported to database.\n",
-      "App contains (350001,) songs.\n"
+      "25000 rows imported to database.\n",
+      "App contains (450001,) songs.\n"
      ]
     }
    ],
