--- a/Fall-2022-Club-Project/Example/Pipelines/Data Science Club ETL Pipeline.ipynb
+++ b/Fall-2022-Club-Project/Example/Pipelines/Data Science Club ETL Pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +62,7 @@
     "server = 'LAPTOP-V3754MEK' \n",
     "database = 'Spotify'\n",
     "\n",
-    "engine = sql.create_engine('mssql+pyodbc://' + server + '/' + database + '?trusted_connection=yes&driver=ODBC+Driver+17+for+SQL+Server')\n",
+    "engine = sql.create_engine('mssql+pyodbc://' + server + '/' + database + '?trusted_connection=yes&driver=ODBC+Driver+13+for+SQL+Server')\n",
     "conn = engine.connect()\n",
     "results = engine.execute(\"SELECT track_uri2 FROM dim_tracks ORDER BY track_uri2\")\n",
     "results = pd.Series(results)\n",
@@ -71,14 +71,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 25000/25000 [36:15<00:00, 11.49it/s]  \n"
+      "100%|██████████| 10000/10000 [16:04<00:00, 10.36it/s]\n"
      ]
     },
     {
@@ -120,119 +120,113 @@
        "      <th>analysis_url</th>\n",
        "      <th>duration_ms</th>\n",
        "      <th>time_signature</th>\n",
-       "      <th>0</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.564</td>\n",
-       "      <td>0.486</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-12.205</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0387</td>\n",
-       "      <td>0.00144</td>\n",
-       "      <td>0.692000</td>\n",
-       "      <td>0.0884</td>\n",
-       "      <td>0.679</td>\n",
-       "      <td>149.920</td>\n",
-       "      <td>audio_features</td>\n",
-       "      <td>1JaocWtKVCDiRERQpDh8s3</td>\n",
-       "      <td>spotify:track:1JaocWtKVCDiRERQpDh8s3</td>\n",
-       "      <td>https://api.spotify.com/v1/tracks/1JaocWtKVCDi...</td>\n",
-       "      <td>https://api.spotify.com/v1/audio-analysis/1Jao...</td>\n",
-       "      <td>197333.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.742</td>\n",
-       "      <td>0.818</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>-3.954</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.2660</td>\n",
-       "      <td>0.00253</td>\n",
+       "      <td>0.500</td>\n",
+       "      <td>0.936</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-7.666</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.4250</td>\n",
+       "      <td>0.0145</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.2210</td>\n",
-       "      <td>0.519</td>\n",
-       "      <td>78.969</td>\n",
+       "      <td>0.4920</td>\n",
+       "      <td>0.816</td>\n",
+       "      <td>161.019</td>\n",
        "      <td>audio_features</td>\n",
-       "      <td>1jAOdMcFKekgKXB21XsnJr</td>\n",
-       "      <td>spotify:track:1jAOdMcFKekgKXB21XsnJr</td>\n",
-       "      <td>https://api.spotify.com/v1/tracks/1jAOdMcFKekg...</td>\n",
-       "      <td>https://api.spotify.com/v1/audio-analysis/1jAO...</td>\n",
-       "      <td>172932.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2EdXuGy7d76Whv0BuJoe6r</td>\n",
+       "      <td>spotify:track:2EdXuGy7d76Whv0BuJoe6r</td>\n",
+       "      <td>https://api.spotify.com/v1/tracks/2EdXuGy7d76W...</td>\n",
+       "      <td>https://api.spotify.com/v1/audio-analysis/2EdX...</td>\n",
+       "      <td>288624</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.600</td>\n",
-       "      <td>0.596</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>-6.706</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0274</td>\n",
-       "      <td>0.04220</td>\n",
-       "      <td>0.024600</td>\n",
-       "      <td>0.1410</td>\n",
-       "      <td>0.257</td>\n",
-       "      <td>126.045</td>\n",
+       "      <td>0.407</td>\n",
+       "      <td>0.765</td>\n",
+       "      <td>4</td>\n",
+       "      <td>-6.175</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0344</td>\n",
+       "      <td>0.0169</td>\n",
+       "      <td>0.004360</td>\n",
+       "      <td>0.5460</td>\n",
+       "      <td>0.121</td>\n",
+       "      <td>153.040</td>\n",
        "      <td>audio_features</td>\n",
-       "      <td>1JaOepr3SJa7zhQgl4CfLz</td>\n",
-       "      <td>spotify:track:1JaOepr3SJa7zhQgl4CfLz</td>\n",
-       "      <td>https://api.spotify.com/v1/tracks/1JaOepr3SJa7...</td>\n",
-       "      <td>https://api.spotify.com/v1/audio-analysis/1JaO...</td>\n",
-       "      <td>216507.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2EDXuUJ28BR45U6Cl6Tisj</td>\n",
+       "      <td>spotify:track:2EDXuUJ28BR45U6Cl6Tisj</td>\n",
+       "      <td>https://api.spotify.com/v1/tracks/2EDXuUJ28BR4...</td>\n",
+       "      <td>https://api.spotify.com/v1/audio-analysis/2EDX...</td>\n",
+       "      <td>351240</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.343</td>\n",
-       "      <td>0.636</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-10.703</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0674</td>\n",
-       "      <td>0.42700</td>\n",
-       "      <td>0.009130</td>\n",
-       "      <td>0.1430</td>\n",
-       "      <td>0.554</td>\n",
-       "      <td>155.842</td>\n",
+       "      <td>0.595</td>\n",
+       "      <td>0.306</td>\n",
+       "      <td>10</td>\n",
+       "      <td>-11.048</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0349</td>\n",
+       "      <td>0.9290</td>\n",
+       "      <td>0.000098</td>\n",
+       "      <td>0.1230</td>\n",
+       "      <td>0.556</td>\n",
+       "      <td>93.872</td>\n",
        "      <td>audio_features</td>\n",
-       "      <td>1JaOhdWitLJB5bcXR3T9tl</td>\n",
-       "      <td>spotify:track:1JaOhdWitLJB5bcXR3T9tl</td>\n",
-       "      <td>https://api.spotify.com/v1/tracks/1JaOhdWitLJB...</td>\n",
-       "      <td>https://api.spotify.com/v1/audio-analysis/1JaO...</td>\n",
-       "      <td>820733.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2EDxZbqgbUY5DW445yFt1V</td>\n",
+       "      <td>spotify:track:2EDxZbqgbUY5DW445yFt1V</td>\n",
+       "      <td>https://api.spotify.com/v1/tracks/2EDxZbqgbUY5...</td>\n",
+       "      <td>https://api.spotify.com/v1/audio-analysis/2EDx...</td>\n",
+       "      <td>193348</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.692</td>\n",
-       "      <td>0.147</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>-16.150</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0431</td>\n",
-       "      <td>0.74200</td>\n",
-       "      <td>0.000001</td>\n",
-       "      <td>0.0938</td>\n",
-       "      <td>0.763</td>\n",
-       "      <td>96.083</td>\n",
+       "      <td>0.735</td>\n",
+       "      <td>0.611</td>\n",
+       "      <td>7</td>\n",
+       "      <td>-7.561</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0946</td>\n",
+       "      <td>0.0440</td>\n",
+       "      <td>0.003930</td>\n",
+       "      <td>0.0295</td>\n",
+       "      <td>0.568</td>\n",
+       "      <td>148.143</td>\n",
        "      <td>audio_features</td>\n",
-       "      <td>1jAoJzGETQaulxFXcaN2RG</td>\n",
-       "      <td>spotify:track:1jAoJzGETQaulxFXcaN2RG</td>\n",
-       "      <td>https://api.spotify.com/v1/tracks/1jAoJzGETQau...</td>\n",
-       "      <td>https://api.spotify.com/v1/audio-analysis/1jAo...</td>\n",
-       "      <td>150013.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2EDy9UxnD8Rz8KzeW4KzR5</td>\n",
+       "      <td>spotify:track:2EDy9UxnD8Rz8KzeW4KzR5</td>\n",
+       "      <td>https://api.spotify.com/v1/tracks/2EDy9UxnD8Rz...</td>\n",
+       "      <td>https://api.spotify.com/v1/audio-analysis/2EDy...</td>\n",
+       "      <td>159133</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.529</td>\n",
+       "      <td>0.136</td>\n",
+       "      <td>7</td>\n",
+       "      <td>-16.693</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0637</td>\n",
+       "      <td>0.9760</td>\n",
+       "      <td>0.670000</td>\n",
+       "      <td>0.1370</td>\n",
+       "      <td>0.345</td>\n",
+       "      <td>120.844</td>\n",
+       "      <td>audio_features</td>\n",
+       "      <td>2EdyBXaB5myLGsBFtiEtA8</td>\n",
+       "      <td>spotify:track:2EdyBXaB5myLGsBFtiEtA8</td>\n",
+       "      <td>https://api.spotify.com/v1/tracks/2EdyBXaB5myL...</td>\n",
+       "      <td>https://api.spotify.com/v1/audio-analysis/2Edy...</td>\n",
+       "      <td>272013</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -240,49 +234,49 @@
       ],
       "text/plain": [
        "   danceability  energy  key  loudness  mode  speechiness  acousticness  \\\n",
-       "0         0.564   0.486  1.0   -12.205   0.0       0.0387       0.00144   \n",
-       "0         0.742   0.818  5.0    -3.954   0.0       0.2660       0.00253   \n",
-       "0         0.600   0.596  4.0    -6.706   0.0       0.0274       0.04220   \n",
-       "0         0.343   0.636  0.0   -10.703   1.0       0.0674       0.42700   \n",
-       "0         0.692   0.147  2.0   -16.150   1.0       0.0431       0.74200   \n",
+       "0         0.500   0.936    1    -7.666     1       0.4250        0.0145   \n",
+       "0         0.407   0.765    4    -6.175     1       0.0344        0.0169   \n",
+       "0         0.595   0.306   10   -11.048     1       0.0349        0.9290   \n",
+       "0         0.735   0.611    7    -7.561     1       0.0946        0.0440   \n",
+       "0         0.529   0.136    7   -16.693     1       0.0637        0.9760   \n",
        "\n",
        "   instrumentalness  liveness  valence    tempo            type  \\\n",
-       "0          0.692000    0.0884    0.679  149.920  audio_features   \n",
-       "0          0.000000    0.2210    0.519   78.969  audio_features   \n",
-       "0          0.024600    0.1410    0.257  126.045  audio_features   \n",
-       "0          0.009130    0.1430    0.554  155.842  audio_features   \n",
-       "0          0.000001    0.0938    0.763   96.083  audio_features   \n",
+       "0          0.000000    0.4920    0.816  161.019  audio_features   \n",
+       "0          0.004360    0.5460    0.121  153.040  audio_features   \n",
+       "0          0.000098    0.1230    0.556   93.872  audio_features   \n",
+       "0          0.003930    0.0295    0.568  148.143  audio_features   \n",
+       "0          0.670000    0.1370    0.345  120.844  audio_features   \n",
        "\n",
        "                       id                                   uri  \\\n",
-       "0  1JaocWtKVCDiRERQpDh8s3  spotify:track:1JaocWtKVCDiRERQpDh8s3   \n",
-       "0  1jAOdMcFKekgKXB21XsnJr  spotify:track:1jAOdMcFKekgKXB21XsnJr   \n",
-       "0  1JaOepr3SJa7zhQgl4CfLz  spotify:track:1JaOepr3SJa7zhQgl4CfLz   \n",
-       "0  1JaOhdWitLJB5bcXR3T9tl  spotify:track:1JaOhdWitLJB5bcXR3T9tl   \n",
-       "0  1jAoJzGETQaulxFXcaN2RG  spotify:track:1jAoJzGETQaulxFXcaN2RG   \n",
+       "0  2EdXuGy7d76Whv0BuJoe6r  spotify:track:2EdXuGy7d76Whv0BuJoe6r   \n",
+       "0  2EDXuUJ28BR45U6Cl6Tisj  spotify:track:2EDXuUJ28BR45U6Cl6Tisj   \n",
+       "0  2EDxZbqgbUY5DW445yFt1V  spotify:track:2EDxZbqgbUY5DW445yFt1V   \n",
+       "0  2EDy9UxnD8Rz8KzeW4KzR5  spotify:track:2EDy9UxnD8Rz8KzeW4KzR5   \n",
+       "0  2EdyBXaB5myLGsBFtiEtA8  spotify:track:2EdyBXaB5myLGsBFtiEtA8   \n",
        "\n",
        "                                          track_href  \\\n",
-       "0  https://api.spotify.com/v1/tracks/1JaocWtKVCDi...   \n",
-       "0  https://api.spotify.com/v1/tracks/1jAOdMcFKekg...   \n",
-       "0  https://api.spotify.com/v1/tracks/1JaOepr3SJa7...   \n",
-       "0  https://api.spotify.com/v1/tracks/1JaOhdWitLJB...   \n",
-       "0  https://api.spotify.com/v1/tracks/1jAoJzGETQau...   \n",
+       "0  https://api.spotify.com/v1/tracks/2EdXuGy7d76W...   \n",
+       "0  https://api.spotify.com/v1/tracks/2EDXuUJ28BR4...   \n",
+       "0  https://api.spotify.com/v1/tracks/2EDxZbqgbUY5...   \n",
+       "0  https://api.spotify.com/v1/tracks/2EDy9UxnD8Rz...   \n",
+       "0  https://api.spotify.com/v1/tracks/2EdyBXaB5myL...   \n",
        "\n",
        "                                        analysis_url  duration_ms  \\\n",
-       "0  https://api.spotify.com/v1/audio-analysis/1Jao...     197333.0   \n",
-       "0  https://api.spotify.com/v1/audio-analysis/1jAO...     172932.0   \n",
-       "0  https://api.spotify.com/v1/audio-analysis/1JaO...     216507.0   \n",
-       "0  https://api.spotify.com/v1/audio-analysis/1JaO...     820733.0   \n",
-       "0  https://api.spotify.com/v1/audio-analysis/1jAo...     150013.0   \n",
+       "0  https://api.spotify.com/v1/audio-analysis/2EdX...       288624   \n",
+       "0  https://api.spotify.com/v1/audio-analysis/2EDX...       351240   \n",
+       "0  https://api.spotify.com/v1/audio-analysis/2EDx...       193348   \n",
+       "0  https://api.spotify.com/v1/audio-analysis/2EDy...       159133   \n",
+       "0  https://api.spotify.com/v1/audio-analysis/2Edy...       272013   \n",
        "\n",
-       "   time_signature    0  \n",
-       "0             4.0  NaN  \n",
-       "0             4.0  NaN  \n",
-       "0             4.0  NaN  \n",
-       "0             4.0  NaN  \n",
-       "0             4.0  NaN  "
+       "   time_signature  \n",
+       "0               4  \n",
+       "0               4  \n",
+       "0               4  \n",
+       "0               4  \n",
+       "0               4  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +284,7 @@
    "source": [
     "# Extract tracks from API\n",
     "output_df = pd.DataFrame()\n",
-    "for row in tqdm(results[425001:450001]):\n",
+    "for row in tqdm(results[670001:680001]):\n",
     "      output = sp.audio_features(row)\n",
     "      output_df = output_df.append(output)\n",
     "output_df.head()"
@@ -298,15 +292,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "25000 rows imported to database.\n",
-      "App contains (450001,) songs.\n"
+      "10000 rows imported to database.\n",
+      "App contains (670001,) songs.\n"
      ]
     }
    ],
