add a few more songs and update UI

--- a/Fall-2022-Club-Project/Example/Pipelines/Data Science Club ETL Pipeline.ipynb
+++ b/Fall-2022-Club-Project/Example/Pipelines/Data Science Club ETL Pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,12 +30,12 @@
     "secret = '2a755cb04a18406b9394dbef2f8069dd'\n",
     "\n",
     "client_credentials_manager = SpotifyClientCredentials(client_id=cid, client_secret=secret)\n",
-    "sp = spotipy.Spotify(client_credentials_manager=client_credentials_manager)"
+    "sp = spotipy.Spotify(client_credentials_manager=client_credentials_manager, requests_timeout=15)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,14 +71,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10000/10000 [15:58<00:00, 10.43it/s]\n"
+      "100%|██████████| 20000/20000 [31:57<00:00, 10.43it/s]  \n"
      ]
     },
     {
@@ -125,107 +125,107 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.295</td>\n",
-       "      <td>0.4780</td>\n",
-       "      <td>11</td>\n",
-       "      <td>-7.997</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0755</td>\n",
-       "      <td>0.0232</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.294</td>\n",
-       "      <td>0.1800</td>\n",
-       "      <td>161.042</td>\n",
-       "      <td>audio_features</td>\n",
-       "      <td>39zAOQvdaBUG6Ws9FeiLyi</td>\n",
-       "      <td>spotify:track:39zAOQvdaBUG6Ws9FeiLyi</td>\n",
-       "      <td>https://api.spotify.com/v1/tracks/39zAOQvdaBUG...</td>\n",
-       "      <td>https://api.spotify.com/v1/audio-analysis/39zA...</td>\n",
-       "      <td>386040</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.321</td>\n",
-       "      <td>0.0865</td>\n",
-       "      <td>5</td>\n",
-       "      <td>-16.822</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0398</td>\n",
-       "      <td>0.8270</td>\n",
-       "      <td>0.000021</td>\n",
-       "      <td>0.249</td>\n",
-       "      <td>0.1170</td>\n",
-       "      <td>91.706</td>\n",
-       "      <td>audio_features</td>\n",
-       "      <td>39zAUogcvW9wHZTQyiwLxO</td>\n",
-       "      <td>spotify:track:39zAUogcvW9wHZTQyiwLxO</td>\n",
-       "      <td>https://api.spotify.com/v1/tracks/39zAUogcvW9w...</td>\n",
-       "      <td>https://api.spotify.com/v1/audio-analysis/39zA...</td>\n",
-       "      <td>116613</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.668</td>\n",
-       "      <td>0.6520</td>\n",
-       "      <td>9</td>\n",
-       "      <td>-7.088</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0970</td>\n",
-       "      <td>0.2130</td>\n",
-       "      <td>0.001610</td>\n",
-       "      <td>0.131</td>\n",
-       "      <td>0.5770</td>\n",
-       "      <td>103.110</td>\n",
-       "      <td>audio_features</td>\n",
-       "      <td>39zB6SRQQjMTi2B076tfAS</td>\n",
-       "      <td>spotify:track:39zB6SRQQjMTi2B076tfAS</td>\n",
-       "      <td>https://api.spotify.com/v1/tracks/39zB6SRQQjMT...</td>\n",
-       "      <td>https://api.spotify.com/v1/audio-analysis/39zB...</td>\n",
-       "      <td>213413</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.283</td>\n",
-       "      <td>0.2130</td>\n",
+       "      <td>0.536</td>\n",
+       "      <td>0.907</td>\n",
        "      <td>8</td>\n",
-       "      <td>-16.570</td>\n",
+       "      <td>-5.324</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.0322</td>\n",
-       "      <td>0.7140</td>\n",
-       "      <td>0.869000</td>\n",
-       "      <td>0.138</td>\n",
-       "      <td>0.3300</td>\n",
-       "      <td>112.683</td>\n",
+       "      <td>0.1250</td>\n",
+       "      <td>0.4190</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.7650</td>\n",
+       "      <td>0.970</td>\n",
+       "      <td>169.633</td>\n",
        "      <td>audio_features</td>\n",
-       "      <td>39ZBweQvRFVxKPz163Kgyp</td>\n",
-       "      <td>spotify:track:39ZBweQvRFVxKPz163Kgyp</td>\n",
-       "      <td>https://api.spotify.com/v1/tracks/39ZBweQvRFVx...</td>\n",
-       "      <td>https://api.spotify.com/v1/audio-analysis/39ZB...</td>\n",
-       "      <td>272536</td>\n",
-       "      <td>1</td>\n",
+       "      <td>3ggrIgQhUoFFv6vKBPg4G6</td>\n",
+       "      <td>spotify:track:3ggrIgQhUoFFv6vKBPg4G6</td>\n",
+       "      <td>https://api.spotify.com/v1/tracks/3ggrIgQhUoFF...</td>\n",
+       "      <td>https://api.spotify.com/v1/audio-analysis/3ggr...</td>\n",
+       "      <td>125693</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.286</td>\n",
-       "      <td>0.2310</td>\n",
-       "      <td>2</td>\n",
-       "      <td>-17.363</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0430</td>\n",
-       "      <td>0.9050</td>\n",
-       "      <td>0.066700</td>\n",
-       "      <td>0.171</td>\n",
-       "      <td>0.0644</td>\n",
-       "      <td>130.413</td>\n",
+       "      <td>0.699</td>\n",
+       "      <td>0.901</td>\n",
+       "      <td>3</td>\n",
+       "      <td>-4.810</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0481</td>\n",
+       "      <td>0.0141</td>\n",
+       "      <td>0.043700</td>\n",
+       "      <td>0.0411</td>\n",
+       "      <td>0.446</td>\n",
+       "      <td>127.999</td>\n",
        "      <td>audio_features</td>\n",
-       "      <td>39ZcDNZUE4IacpvhxbBUub</td>\n",
-       "      <td>spotify:track:39ZcDNZUE4IacpvhxbBUub</td>\n",
-       "      <td>https://api.spotify.com/v1/tracks/39ZcDNZUE4Ia...</td>\n",
-       "      <td>https://api.spotify.com/v1/audio-analysis/39Zc...</td>\n",
-       "      <td>1520493</td>\n",
+       "      <td>3GgrKLce2KSLSktzFKEzzG</td>\n",
+       "      <td>spotify:track:3GgrKLce2KSLSktzFKEzzG</td>\n",
+       "      <td>https://api.spotify.com/v1/tracks/3GgrKLce2KSL...</td>\n",
+       "      <td>https://api.spotify.com/v1/audio-analysis/3Ggr...</td>\n",
+       "      <td>229663</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.685</td>\n",
+       "      <td>0.654</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-8.181</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.2070</td>\n",
+       "      <td>0.1070</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.1270</td>\n",
+       "      <td>0.297</td>\n",
+       "      <td>75.276</td>\n",
+       "      <td>audio_features</td>\n",
+       "      <td>3GGRSJW9GVO9s3rskYm0O2</td>\n",
+       "      <td>spotify:track:3GGRSJW9GVO9s3rskYm0O2</td>\n",
+       "      <td>https://api.spotify.com/v1/tracks/3GGRSJW9GVO9...</td>\n",
+       "      <td>https://api.spotify.com/v1/audio-analysis/3GGR...</td>\n",
+       "      <td>153626</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.756</td>\n",
+       "      <td>0.304</td>\n",
+       "      <td>8</td>\n",
+       "      <td>-9.562</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.2170</td>\n",
+       "      <td>0.0191</td>\n",
+       "      <td>0.036300</td>\n",
+       "      <td>0.1110</td>\n",
+       "      <td>0.492</td>\n",
+       "      <td>85.359</td>\n",
+       "      <td>audio_features</td>\n",
+       "      <td>3GgrY8G2WmsXhP8zjq0yvZ</td>\n",
+       "      <td>spotify:track:3GgrY8G2WmsXhP8zjq0yvZ</td>\n",
+       "      <td>https://api.spotify.com/v1/tracks/3GgrY8G2WmsX...</td>\n",
+       "      <td>https://api.spotify.com/v1/audio-analysis/3Ggr...</td>\n",
+       "      <td>283973</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.777</td>\n",
+       "      <td>0.819</td>\n",
+       "      <td>8</td>\n",
+       "      <td>-5.770</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0294</td>\n",
+       "      <td>0.1250</td>\n",
+       "      <td>0.000006</td>\n",
+       "      <td>0.1110</td>\n",
+       "      <td>0.542</td>\n",
+       "      <td>129.971</td>\n",
+       "      <td>audio_features</td>\n",
+       "      <td>3GGRZ7M2UBQEIVdXGaQ0gG</td>\n",
+       "      <td>spotify:track:3GGRZ7M2UBQEIVdXGaQ0gG</td>\n",
+       "      <td>https://api.spotify.com/v1/tracks/3GGRZ7M2UBQE...</td>\n",
+       "      <td>https://api.spotify.com/v1/audio-analysis/3GGR...</td>\n",
+       "      <td>222253</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -234,49 +234,49 @@
       ],
       "text/plain": [
        "   danceability  energy  key  loudness  mode  speechiness  acousticness  \\\n",
-       "0         0.295  0.4780   11    -7.997     1       0.0755        0.0232   \n",
-       "0         0.321  0.0865    5   -16.822     1       0.0398        0.8270   \n",
-       "0         0.668  0.6520    9    -7.088     0       0.0970        0.2130   \n",
-       "0         0.283  0.2130    8   -16.570     1       0.0322        0.7140   \n",
-       "0         0.286  0.2310    2   -17.363     1       0.0430        0.9050   \n",
+       "0         0.536   0.907    8    -5.324     1       0.1250        0.4190   \n",
+       "0         0.699   0.901    3    -4.810     0       0.0481        0.0141   \n",
+       "0         0.685   0.654    1    -8.181     0       0.2070        0.1070   \n",
+       "0         0.756   0.304    8    -9.562     1       0.2170        0.0191   \n",
+       "0         0.777   0.819    8    -5.770     0       0.0294        0.1250   \n",
        "\n",
        "   instrumentalness  liveness  valence    tempo            type  \\\n",
-       "0          0.000000     0.294   0.1800  161.042  audio_features   \n",
-       "0          0.000021     0.249   0.1170   91.706  audio_features   \n",
-       "0          0.001610     0.131   0.5770  103.110  audio_features   \n",
-       "0          0.869000     0.138   0.3300  112.683  audio_features   \n",
-       "0          0.066700     0.171   0.0644  130.413  audio_features   \n",
+       "0          0.000000    0.7650    0.970  169.633  audio_features   \n",
+       "0          0.043700    0.0411    0.446  127.999  audio_features   \n",
+       "0          0.000000    0.1270    0.297   75.276  audio_features   \n",
+       "0          0.036300    0.1110    0.492   85.359  audio_features   \n",
+       "0          0.000006    0.1110    0.542  129.971  audio_features   \n",
        "\n",
        "                       id                                   uri  \\\n",
-       "0  39zAOQvdaBUG6Ws9FeiLyi  spotify:track:39zAOQvdaBUG6Ws9FeiLyi   \n",
-       "0  39zAUogcvW9wHZTQyiwLxO  spotify:track:39zAUogcvW9wHZTQyiwLxO   \n",
-       "0  39zB6SRQQjMTi2B076tfAS  spotify:track:39zB6SRQQjMTi2B076tfAS   \n",
-       "0  39ZBweQvRFVxKPz163Kgyp  spotify:track:39ZBweQvRFVxKPz163Kgyp   \n",
-       "0  39ZcDNZUE4IacpvhxbBUub  spotify:track:39ZcDNZUE4IacpvhxbBUub   \n",
+       "0  3ggrIgQhUoFFv6vKBPg4G6  spotify:track:3ggrIgQhUoFFv6vKBPg4G6   \n",
+       "0  3GgrKLce2KSLSktzFKEzzG  spotify:track:3GgrKLce2KSLSktzFKEzzG   \n",
+       "0  3GGRSJW9GVO9s3rskYm0O2  spotify:track:3GGRSJW9GVO9s3rskYm0O2   \n",
+       "0  3GgrY8G2WmsXhP8zjq0yvZ  spotify:track:3GgrY8G2WmsXhP8zjq0yvZ   \n",
+       "0  3GGRZ7M2UBQEIVdXGaQ0gG  spotify:track:3GGRZ7M2UBQEIVdXGaQ0gG   \n",
        "\n",
        "                                          track_href  \\\n",
-       "0  https://api.spotify.com/v1/tracks/39zAOQvdaBUG...   \n",
-       "0  https://api.spotify.com/v1/tracks/39zAUogcvW9w...   \n",
-       "0  https://api.spotify.com/v1/tracks/39zB6SRQQjMT...   \n",
-       "0  https://api.spotify.com/v1/tracks/39ZBweQvRFVx...   \n",
-       "0  https://api.spotify.com/v1/tracks/39ZcDNZUE4Ia...   \n",
+       "0  https://api.spotify.com/v1/tracks/3ggrIgQhUoFF...   \n",
+       "0  https://api.spotify.com/v1/tracks/3GgrKLce2KSL...   \n",
+       "0  https://api.spotify.com/v1/tracks/3GGRSJW9GVO9...   \n",
+       "0  https://api.spotify.com/v1/tracks/3GgrY8G2WmsX...   \n",
+       "0  https://api.spotify.com/v1/tracks/3GGRZ7M2UBQE...   \n",
        "\n",
        "                                        analysis_url  duration_ms  \\\n",
-       "0  https://api.spotify.com/v1/audio-analysis/39zA...       386040   \n",
-       "0  https://api.spotify.com/v1/audio-analysis/39zA...       116613   \n",
-       "0  https://api.spotify.com/v1/audio-analysis/39zB...       213413   \n",
-       "0  https://api.spotify.com/v1/audio-analysis/39ZB...       272536   \n",
-       "0  https://api.spotify.com/v1/audio-analysis/39Zc...      1520493   \n",
+       "0  https://api.spotify.com/v1/audio-analysis/3ggr...       125693   \n",
+       "0  https://api.spotify.com/v1/audio-analysis/3Ggr...       229663   \n",
+       "0  https://api.spotify.com/v1/audio-analysis/3GGR...       153626   \n",
+       "0  https://api.spotify.com/v1/audio-analysis/3Ggr...       283973   \n",
+       "0  https://api.spotify.com/v1/audio-analysis/3GGR...       222253   \n",
        "\n",
        "   time_signature  \n",
        "0               4  \n",
-       "0               3  \n",
        "0               4  \n",
-       "0               1  \n",
+       "0               4  \n",
+       "0               4  \n",
        "0               4  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
    "source": [
     "# Extract tracks from API\n",
     "output_df = pd.DataFrame()\n",
-    "for row in tqdm(results[920001:930001]):\n",
+    "for row in tqdm(results[980001:1000001]):\n",
     "      output = pd.DataFrame(sp.audio_features(row))\n",
     "      output_df = pd.concat([output_df, output])\n",
     "output_df.head()"
@@ -292,15 +292,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10000 rows imported to database.\n",
-      "App contains (920001,) songs.\n"
+      "20000 rows imported to database.\n",
+      "App contains (989959,) songs.\n"
      ]
     }
    ],
@@ -310,7 +310,7 @@
     "output_df = output_df.rename(columns={'key':'music_key', 'mode':'modal'})\n",
     "output_df.to_sql(\"audio_features2\", engine, if_exists='append', index=False)\n",
     "print(f'{len(output_df)} rows imported to database.')\n",
-    "new_query = engine.execute('SELECT COUNT(*) FROM audio_features2')\n",
+    "new_query = engine.execute('SELECT COUNT(DISTINCT uri) FROM audio_features2')\n",
     "new_query = pd.Series(new_query)\n",
     "print(f'App contains {new_query[0]} songs.')"
    ]
